--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -8,6 +8,10 @@
             body {
                 margin: 0;
             }
+
+            ::-webkit-scrollbar {
+                display: none;
+            }
         </style>
     </head>
     <body>
